--- a/Server_gozero/CS/userServer/api/etc/user-api.yaml
+++ b/Server_gozero/CS/userServer/api/etc/user-api.yaml
@@ -33,5 +33,5 @@ CacheRedis:
   - Host: 127.0.0.1:6379
 
 Wechat:
-  AppID : "wx56a50ebd55771e08"
+  AppID : "wxef266d9ba288d9f1"
   AppSecret: "1b1b3393a7674470bbecca8d29487d65"
