--- a/Client/app.json
+++ b/Client/app.json
@@ -7,6 +7,7 @@
     "pages/usercenter/person-info/index",
     "pages/usercenter/address/list/index",
     "pages/usercenter/address/edit/index",
+    "pages/usercenter/my-attention/index",
     "pages/goods/list/index",
     "pages/goods/details/index",
     "pages/goods/category/index",
